--- a/Style.css
+++ b/Style.css
@@ -1,73 +1,47 @@
-h1{
-	text-align: center;
-		background-color:	#FFFFE0;
-}
-.video{
-	text-align: center;
-}
-h2{
-	text-align: center;
-		background-color:	#FFFFE0;
-	border: 50px,solid ,#000000;
-
-}
-.your-centered-div {
-    width: 560px; /* you have to have a size or this method doesn't work */
-    height: 315px;
-
-    /* positions according to the nearest parent */
-    top: 0; right: 0; /* confuse it i guess */
-    bottom: 0; left: 0;
-    margin: auto; /* make em equal */
-
-    border: 1px solid red;
-}
-.footer{
-	text-align: center;
-}
-body{
-	background-color:	#FFFFE0;
-}
-#main{
-	text-align: center;
-	border: 10px;
-	font-weight: bolder;
-	text-decoration: underline;
-		background-color:	#FFFFE0;
-}
-body{
-	line-height: 2;
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
 }
 
-.centerimage{
-	text-align:center;
-	positon:absolute;
+header {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 1em 0;
+}
 
+h1 {
+    margin: 0;
 }
-h3{
-	text-align: center;
-	background-color:	#FFFFE0;
-}
-figcaption{
-	text-align: center;
 
+main {
+    padding: 20px;
 }
-blockquote {
-	text-align: center;
-	font-size: 20px;
-}
-p {
-	text-align: center;
-	font-size: : 25px;
 
+.intro {
+    text-align: center;
+    margin-bottom: 20px;
 }
-figure figcaption{
-text-align: center;
+
+.gallery {
+    text-align: center;
 }
-.new{
-	text-align:left;
+
+.photos img {
+    width: 30%;
+    margin: 10px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
-img {
-    display: block;
-    margin: 0 auto;
+
+footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 1em 0;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
 }
