--- a/Style.css
+++ b/Style.css
@@ -1,47 +1,99 @@
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 16px;
+}
+
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    margin: 0;
-    padding: 0;
+  font-family: 'Open Sans', sans-serif;
 }
 
-header {
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 1em 0;
+.label {
+  border: 2px solid black;
+  width: 270px;
+  margin: 20px auto;
+  padding: 0 7px;
 }
 
-h1 {
-    margin: 0;
+header h1 {
+  text-align: center;
+  margin: -4px 0;
+  letter-spacing: 0.15px
 }
 
-main {
-    padding: 20px;
+p {
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
 }
 
-.intro {
-    text-align: center;
-    margin-bottom: 20px;
+.divider {
+  border-bottom: 1px solid #888989;
+  margin: 2px 0;
 }
 
-.gallery {
-    text-align: center;
+.bold {
+  font-weight: 800;
 }
 
-.photos img {
-    width: 30%;
-    margin: 10px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+.large {
+  height: 10px;
 }
 
-footer {
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 1em 0;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
+.large, .medium {
+  background-color: black;
+  border: 0;
+}
+
+.medium {
+  height: 5px;
+}
+
+.small-text {
+  font-size: 0.85rem;
+}
+
+
+.calories-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.calories-info h2 {
+  margin: 0;
+}
+
+.left-container p {
+  margin: -5px -2px;
+  font-size: 2em;
+  font-weight: 700;
+}
+
+.calories-info span {
+  margin: -7px -2px;
+  font-size: 2.4em;
+  font-weight: 700;
+}
+
+.right {
+  justify-content: flex-end;
+}
+
+.indent {
+  margin-left: 1em;
+}
+
+.double-indent {
+  margin-left: 2em;
+}
+
+.daily-value p:not(.no-divider) {
+  border-bottom: 1px solid #888989;
+}
+.note {
+  font-size: 0.6rem;
+  margin: 5px 0;
 }
