--- a/styles.css
+++ b/styles.css
@@ -1,99 +1,57 @@
-* {
-  box-sizing: border-box;
-}
-
-html {
-  font-size: 16px;
-}
-
 body {
-  font-family: 'Open Sans', sans-serif;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
 }
 
-.label {
-  border: 2px solid black;
-  width: 270px;
-  margin: 20px auto;
-  padding: 0 7px;
+header {
+    background-color: #333;
+    color: #fff;
+    padding: 1rem 0;
+    text-align: center;
 }
 
 header h1 {
-  text-align: center;
-  margin: -4px 0;
-  letter-spacing: 0.15px
+    margin: 0;
+    font-size: 2rem;
 }
 
-p {
-  margin: 0;
-  display: flex;
-  justify-content: space-between;
+nav ul {
+    list-style: none;
+    padding: 0;
 }
 
-.divider {
-  border-bottom: 1px solid #888989;
-  margin: 2px 0;
+nav ul li {
+    display: inline;
+    margin: 0 1rem;
 }
 
-.bold {
-  font-weight: 800;
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
 }
 
-.large {
-  height: 10px;
+main {
+    padding: 1rem;
 }
 
-.large, .medium {
-  background-color: black;
-  border: 0;
+section {
+    margin: 2rem 0;
 }
 
-.medium {
-  height: 5px;
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 1rem 0;
 }
 
-.small-text {
-  font-size: 0.85rem;
+footer a {
+    color: #fff;
+    text-decoration: none;
 }
 
-
-.calories-info {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-}
-
-.calories-info h2 {
-  margin: 0;
-}
-
-.left-container p {
-  margin: -5px -2px;
-  font-size: 2em;
-  font-weight: 700;
-}
-
-.calories-info span {
-  margin: -7px -2px;
-  font-size: 2.4em;
-  font-weight: 700;
-}
-
-.right {
-  justify-content: flex-end;
-}
-
-.indent {
-  margin-left: 1em;
-}
-
-.double-indent {
-  margin-left: 2em;
-}
-
-.daily-value p:not(.no-divider) {
-  border-bottom: 1px solid #888989;
-}
-.note {
-  font-size: 0.6rem;
-  margin: 5px 0;
+footer p {
+    margin: 0;
 }
